--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 azure-cognitiveservices-speech==1.32.1
+dateparser==1.1.8
 pathlib==1.0.1
+pydub==0.25.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
+PyYAML==6.0
+regex==2023.8.8
+six==1.16.0
+tzlocal==5.0.1
+wave==0.0.2
